Fix::add word break class, so that if string is too long, it can be break

--- a/source/media/css/paycart.css
+++ b/source/media/css/paycart.css
@@ -296,3 +296,7 @@
 .pc-break-word {
     word-wrap : break-word;
 }
+
+.pc-word-break{
+    word-break: break-all;
+}
